--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "json-server": "^0.16.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^5.3.0"
   }
 }
